# edi-ems

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml
api/: models.py  router.py  serializers.py  signals.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_workarrangement_hours_per_week_and_more.py  0003_alter_teamleader_team.py  0004_alter_teamemployee_employee.py  0005_alter_workarrangement_employee.py  0006_alter_teamemployee_team_alter_teamleader_team.py
edi_ems_api/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_employee_viewset.py  test_salary_viewset.py  test_team_employee_viewset.py  test_team_leader_viewsets.py  test_team_viewset.py  test_work_arrangement_viewset.py
